<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/user"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_image"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/register_area"
        android:textColor="#220505"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_register"
        android:gravity="center"
        android:textColor="#27010D"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/form_register"
        android:layout_width="402dp"
        android:layout_height="400dp"
        android:layout_below="@id/desc_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#80FFFFFF"
        android:padding="16dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#8A2525" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#8A2525" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:hint="@string/fullname"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#8A2525" />

        <EditText
            android:id="@+id/nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="155dp"
            android:hint="@string/nim"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#8A2525" />

        <EditText
            android:id="@+id/kelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="205dp"
            android:hint="@string/kelas"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#8A2525" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="185dp"
            android:background="#02071F"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/title_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/sudah_punya_akun"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/title_footer"
            android:text="@string/login_accouint"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>