<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#80FFFFFF"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/title_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/personal_area"
            android:textColor="#220505"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fullname_personal"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/fullname_personal"
            android:textColor="#220505"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="146dp" />

        <TextView
            android:id="@+id/username_personal"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/username_personal"
            android:textColor="#220505"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="102dp" />

        <TextView
            android:id="@+id/nim_personal"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/nim_personal"
            android:textColor="#220505"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="191dp" />

        <TextView
            android:id="@+id/kelas_personal"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/kelas_personal"
            android:textColor="#220505"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="232dp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:background="#02071F"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>